feat(category),chore: add category management, update handler response and swagger
