# domain/requests/category_request.go
@@ -1,0 +1,5 @@
+package requests
+
+type AddCategoryRequest struct {
+	CategoryName string `json:"categoryName" validate:"required"`
+}
